--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "material-dashboard-angular",
-  "version": "2.1.0",
+  "name": "now-ui-dashboard-angular",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -23,9 +23,10 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@angular/platform-server": "5.2.9",
     "@angular/router": "5.2.9",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "ajv": "6.2.1",
     "ajv-keywords": "3.1.0",
+    "angular2-notifications": "1.0.0",
     "bootstrap": "4.1.0",
     "chart.js": "2.7.2",
     "chartist": "0.11.0",
@@ -36,7 +37,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.10",
-    "ng2-charts": "^1.6.0",
+    "ng2-charts": "1.6.0",
     "ng2-nouislider": "1.7.7",
     "nouislider": "10.0.0",
     "perfect-scrollbar": "1.1.0",
@@ -52,7 +53,7 @@
     "@angular/language-service": "5.2.9",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
-    "@types/googlemaps": "^3.30.8",
+    "@types/googlemaps": "3.30.8",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "1.10.31",
     "@types/node": "6.0.73",
