--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "ajv": "6.2.1",
     "ajv-keywords": "3.1.0",
-    "angular2-notifications": "1.0.0",
     "bootstrap": "4.1.0",
     "chart.js": "2.7.2",
     "chartist": "0.11.0",
@@ -39,6 +38,7 @@
     "jw-bootstrap-switch-ng2": "1.0.10",
     "ng2-charts": "1.6.0",
     "ng2-nouislider": "1.7.7",
+    "ngx-toastr": "^8.5.0",
     "nouislider": "10.0.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
