--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "5.2.9",
-    "@angular/common": "5.2.9",
-    "@angular/compiler": "5.2.9",
-    "@angular/core": "5.2.9",
-    "@angular/forms": "5.2.9",
-    "@angular/http": "5.2.9",
-    "@angular/platform-browser": "5.2.9",
-    "@angular/platform-browser-dynamic": "5.2.9",
-    "@angular/platform-server": "5.2.9",
-    "@angular/router": "5.2.9",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0",
+    "@angular/animations": "6.0.2",
+    "@angular/common": "6.0.2",
+    "@angular/compiler": "6.0.2",
+    "@angular/core": "6.0.2",
+    "@angular/forms": "6.0.2",
+    "@angular/http": "6.0.2",
+    "@angular/platform-browser": "6.0.2",
+    "@angular/platform-browser-dynamic": "6.0.2",
+    "@angular/platform-server": "6.0.2",
+    "@angular/router": "6.0.2",
+    "@ng-bootstrap/ng-bootstrap": "2.0.0",
     "ajv": "6.2.1",
     "ajv-keywords": "3.1.0",
     "bootstrap": "4.1.0",
@@ -37,20 +36,20 @@
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.10",
     "ng2-charts": "1.6.0",
-    "ng2-nouislider": "1.7.7",
     "ngx-toastr": "^8.5.0",
     "nouislider": "10.0.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rellax": "1.4.0",
-    "rxjs": "5.5.6",
+    "rxjs": "6.1.0",
+    "rxjs-compat": "6.1.0",
     "web-animations-js": "2.3.1",
-    "zone.js": "0.8.4"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "5.2.9",
-    "@angular/language-service": "5.2.9",
+    "@angular/compiler-cli": "6.0.2",
+    "@angular/language-service": "6.0.2",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
     "@types/googlemaps": "3.30.8",
@@ -68,6 +67,6 @@
     "protractor": "5.3.1",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
-    "typescript": "2.4.2"
+    "typescript": "2.7.2"
   }
 }
