--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.2",
-    "@angular/common": "6.0.2",
-    "@angular/compiler": "6.0.2",
-    "@angular/core": "6.0.2",
-    "@angular/forms": "6.0.2",
-    "@angular/http": "6.0.2",
-    "@angular/platform-browser": "6.0.2",
-    "@angular/platform-browser-dynamic": "6.0.2",
-    "@angular/platform-server": "6.0.2",
-    "@angular/router": "6.0.2",
+    "@angular/animations": "7.2.2",
+    "@angular/common": "7.2.2",
+    "@angular/compiler": "7.2.2",
+    "@angular/core": "7.2.2",
+    "@angular/forms": "7.2.2",
+    "@angular/http": "7.2.2",
+    "@angular/platform-browser": "7.2.2",
+    "@angular/platform-browser-dynamic": "7.2.2",
+    "@angular/platform-server": "7.2.2",
+    "@angular/router": "7.2.2",
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
     "ajv": "6.2.1",
     "ajv-keywords": "3.1.0",
@@ -41,15 +41,17 @@
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rellax": "1.4.0",
-    "rxjs": "6.1.0",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "6.1.0",
+    "tslib": "^1.9.0",
     "web-animations-js": "2.3.1",
-    "zone.js": "0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "6.0.2",
-    "@angular/language-service": "6.0.2",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "7.2.3",
+    "@angular/compiler-cli": "7.2.2",
+    "@angular/language-service": "7.2.2",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
     "@types/googlemaps": "3.30.8",
@@ -67,6 +69,6 @@
     "protractor": "5.3.1",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
-    "typescript": "2.7.2"
+    "typescript": "3.2.4"
   }
 }
