--- a/package.json
+++ b/package.json
@@ -13,62 +13,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.2",
-    "@angular/common": "7.2.2",
-    "@angular/compiler": "7.2.2",
-    "@angular/core": "7.2.2",
-    "@angular/forms": "7.2.2",
-    "@angular/http": "7.2.2",
-    "@angular/platform-browser": "7.2.2",
-    "@angular/platform-browser-dynamic": "7.2.2",
-    "@angular/platform-server": "7.2.2",
-    "@angular/router": "7.2.2",
-    "@ng-bootstrap/ng-bootstrap": "4.0.2",
-    "ajv": "6.7.0",
-    "ajv-keywords": "3.3.0",
+    "@angular/animations": "9.0.6",
+    "@angular/common": "9.0.6",
+    "@angular/compiler": "9.0.6",
+    "@angular/core": "9.0.6",
+    "@angular/forms": "9.0.6",
+    "@angular/http": "7.2.16",
+    "@angular/localize": "^9.0.6",
+    "@angular/platform-browser": "9.0.6",
+    "@angular/platform-browser-dynamic": "9.0.6",
+    "@angular/platform-server": "9.0.6",
+    "@angular/router": "9.0.6",
+    "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "ajv": "6.12.0",
+    "ajv-keywords": "3.4.1",
     "bootstrap": "4.2.1",
     "chart.js": "2.7.3",
     "chartist": "0.11.0",
     "classlist.js": "1.1.20150312",
     "copy-webpack-plugin": "4.6.0",
-    "core-js": "2.6.3",
+    "core-js": "3.6.4",
     "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "3.3.1",
     "jw-bootstrap-switch-ng2": "2.0.4",
     "ng2-charts": "1.6.0",
-    "ngx-toastr": "^9.1.1",
+    "ngx-toastr": "12.0.0",
     "nouislider": "12.1.0",
     "perfect-scrollbar": "1.4.0",
     "popper.js": "1.14.6",
     "rellax": "1.7.2",
-    "rxjs": "^6.3.3",
-    "tslib": "^1.9.3",
+    "rxjs": "6.3.3",
+    "tslib": "^1.11.1",
     "web-animations-js": "2.3.1",
-    "zone.js": "^0.8.29"
+    "zone.js": "0.8.27"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.3",
-    "@angular/cli": "7.2.3",
-    "@angular/compiler-cli": "7.2.2",
-    "@angular/language-service": "7.2.2",
+    "@angular-devkit/build-angular": "~0.900.6",
+    "@angular/cli": "9.0.6",
+    "@angular/compiler-cli": "9.0.6",
+    "@angular/language-service": "9.0.6",
     "@types/bootstrap": "4.2.1",
     "@types/chartist": "0.9.43",
     "@types/googlemaps": "3.30.16",
-    "@types/jasmine": "3.3.8",
+    "@types/jasmine": "3.3.5",
     "@types/jquery": "3.3.29",
-    "@types/node": "10.12.18",
-    "codelyzer": "4.5.0",
-    "jasmine-core": "3.3.0",
+    "@types/node": "13.9.1",
+    "codelyzer": "5.2.1",
+    "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.0.0",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "2.0.1",
-    "protractor": "5.4.2",
-    "ts-node": "8.0.2",
+    "karma-coverage-istanbul-reporter": "2.1.1",
+    "karma-jasmine": "3.1.1",
+    "protractor": "5.4.3",
+    "ts-node": "7.0.1",
     "tslint": "5.12.1",
-    "typescript": "3.2.4"
+    "typescript": "3.7.5"
   }
 }
