--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "now-ui-dashboard-angular",
-  "version": "1.2.0",
+  "version": "1.4.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,18 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.5",
-    "@angular/common": "11.0.5",
-    "@angular/compiler": "11.0.5",
-    "@angular/core": "11.0.5",
-    "@angular/forms": "11.0.5",
-    "@angular/http": "7.2.16",
-    "@angular/localize": "^11.0.5",
-    "@angular/platform-browser": "11.0.5",
-    "@angular/platform-browser-dynamic": "11.0.5",
-    "@angular/platform-server": "11.0.5",
-    "@angular/router": "11.0.5",
-    "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "@adactive/bootstrap-tagsinput": "0.8.2",
+    "@angular/animations": "^13.2.6",
+    "@angular/cdk": "^13.2.6",
+    "@angular/common": "^13.2.6",
+    "@angular/compiler": "^13.2.6",
+    "@angular/core": "^13.2.6",
+    "@angular/elements": "^13.2.6",
+    "@angular/forms": "^13.2.6",
+    "@angular/google-maps": "^13.3.3",
+    "@angular/localize": "^13.2.6",
+    "@angular/material": "^13.2.6",
+    "@angular/platform-browser": "^13.2.6",
+    "@angular/platform-browser-dynamic": "^13.2.6",
+    "@angular/router": "^13.2.6",
+    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@popperjs/core": "^2.11.4",
     "ajv": "7.0.1",
     "ajv-keywords": "4.0.0",
     "bootstrap": "4.5.3",
@@ -43,33 +47,34 @@
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
     "rellax": "1.12.1",
-    "rxjs": "6.6.3",
-    "tslib": "^2.0.3",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "6.6.7",
     "web-animations-js": "2.3.2",
-    "zone.js": "0.11.3"
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "11.0.4",
-    "@angular/compiler-cli": "11.0.5",
-    "@angular/language-service": "11.0.5",
+    "@angular-devkit/build-angular": "^13.2.6",
+    "@angular/cli": "^13.2.6",
+    "@angular/compiler-cli": "^13.2.6",
+    "@angular/language-service": "13.2.6",
+    "@types/jasmine": "~3.10.3",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^17.0.21",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "~4.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "7.0.0",
+    "ts-node": "~10.7.0",
+    "typescript": "~4.4.2",
     "@types/bootstrap": "5.0.1",
     "@types/chartist": "0.11.0",
     "@types/googlemaps": "3.40.5",
-    "@types/jasmine": "3.6.2",
-    "@types/jquery": "3.5.5",
-    "@types/node": "14.14.14",
-    "codelyzer": "6.0.1",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
-    "karma": "5.2.3",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "protractor": "7.0.0",
-    "ts-node": "9.1.1",
-    "tslint": "6.1.3",
-    "typescript": "4.0.3"
+    "@types/jquery": "3.5.5"
   }
 }
